--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "nesbot/carbon": "^2.72"
+        "nesbot/carbon": "^2.72",
+        "stripe/stripe-php": "^14.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
